# caosp-hivel-pipeline

./: .env.example  .gitignore  CITATION.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: catalogs.yaml  query_fields.yaml  settings.yaml
data/processed/: final_rv_sensitivity.csv  final_top_candidates.csv  rv_outlier_followup.csv  (+4 more)
manuscript/: README.md  build.sh  caosp310.bst  caosp310.cls  cover_letter.md  final_polish_report.md  manuscript.tex  reference_usage_plan.md  references.bib
paper/: figure_captions.md  table_notes.md
reports/: catalog_sources.md  distance_upgrade_bailer_jones.md  figure_table_inventory.md  final_kinematics_summary.md  final_sample_definition.md  gaia_vizier_qc.md  kinematic_conventions.md  kinematics_summary.md  lamost_catalog_schema.md  lamost_crossmatch_summary.md  same_sample_distance_sensitivity.md  source_id_integrity_audit.md  top3_simbad.md
scripts/: 00_check_env.py  01_fetch_vizier_hivel_catalogs.py  02_fetch_gaia_dr3_fields.py  03_fetch_lamost_catalogs.py  04A_build_gaia_master_qc.py  04B_kinematics_mc.py  04D_bailer_jones_distance.py  04_crossmatch_lamost_gaia.py  05_fetch_simbad_validation.py  05_lamost_crossmatch.py  06B_final_kinematics.py  06C_same_sample_distance_sensitivity.py  06_build_final_dataset.py  06_define_final_sample.py  07_paper_figures_tables.py  08_top3_simbad_check.py  _fix_vgrf_corruption.py  _strip_table_wrappers.py  _unicode_to_latex_in_tables.py  _verb_to_texttt.py
tests/: test_config.py  test_crossmatch.py  test_source_id_integrity.py
(+25 files in other folders)
