[project]
name = "caosp-hivel-pipeline"
version = "0.1.0"
description = "Compliant data download & processing pipeline for the CAOSP high-velocity stars paper."
requires-python = ">=3.10"
dependencies = [
  "astropy>=6.0",
  "astroquery>=0.4.7",
  "pyvo>=1.5",
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "pyarrow>=15.0",
  "requests>=2.31",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "ipykernel>=6.29"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
